# acme-dw

./: .gitignore  Dockerfile  README.md  create_env.sh  env.manifest  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: container.yml  release.yml
docs/: mkdocs.yml
docs/docs/: api.md  install.md
src/acme_dw/: __init__.py  _main.py  backends.py  dw.py
tests/acme_dw/: test_backends.py  test_dw.py
