[build-system]
requires = ["setuptools>=46.4.0", "wheel>=0.36.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_dw"
version = "0.0.6"
description = "Simple data warehouse with pluggable storage (local filesystem or S3)"
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.12"]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "pandas",
    "pyarrow",
    "polars",
]

[[project.authors]]
email = "guner.stan@gmail.com"

[project.scripts]
adw = "acme_dw._main:main"

[project.urls]
homepage = "https://example.com"
repository = "https://example.com"

[project.optional-dependencies]
s3 = [
    "acme_s3>=0.0.5",
]
dev = [
    "pytest",
    "uv",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "jupyterlab",
    "acme_s3>=0.0.5",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["acme_dw"]
# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
license-files = []
